# hkl-mac

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac  gtk-doc.m4  hkl.h  hkl.h.in  main.py  pyproject.toml
.github/: build.yml
.github/workflows/: build.yml
Documentation/: Makefile.am  hkl-default.el  hkl.org  hkl.org.in
Documentation/figures/: Makefile.am  sirius  sirius.c
binoculars-ng/: Makefile.am  hkl.cabal  hkl.cabal.in
binoculars-ng/binoculars/: Makefile.am  hkl-binoculars-detectors-2d-private.h  hkl-binoculars-io-cnpy.c  hkl-binoculars-io-private.h  hkl-binoculars.c  hkl-binoculars.h
binoculars-ng/data/test/: config_sixs_ruche_20241687.ini  config_sixs_ruche_20241687_gisaxs.ini  config_sixs_ruche_qpars.ini  config_sixs_ruche_shift.ini  config_sixs_ruche_threshold.ini
binoculars-ng/src/Hkl/: DataSource.hs  Detector.hs  Exception.hs  H5.hs  HKD.hs  Image.hs  MyMatrix.hs  Pipes.hs  Repa.hs
binoculars-ng/src/Hkl/Binoculars/: Conduit.hs  Config.hs  Pipes.hs  Projections.hs
binoculars-ng/src/Hkl/Binoculars/Projections/: Angles.hs  Hkl.hs  QCustom.hs  Test.hs
binoculars-ng/src/Hkl/Binoculars/Projections/Config/: Common.hs  Sample.hs
binoculars-ng/src/Hkl/C/: Binoculars.hsc
binoculars-ng/test/: BinocularsSpec.hs
contrib/petra3/: Makefile.am
data/: Makefile.am  blender_gltf_converter.py  cristal4C.yaml  diffabs.yaml  soleil-cristal-4c.yaml  soleil-diffabs.yaml
gui/: 3d-4.ui  Makefile.am  ghkl-4.ui  hkl-gui-3d.c  hkl-gui-3d.h  hkl-gui-diffractometer-private.h  hkl-gui-diffractometer.c  hkl-gui-engine.c  hkl-gui-factory.c  hkl-gui-geometry.c  hkl-gui-item-factories.c  hkl-gui-macros.h  hkl-gui-parameter.c  hkl-gui-pseudoaxes.c  hkl-gui-sample-reflection.c  hkl-gui-sample.c  hkl-gui.c  hkl-gui.h  pseudo-4.ui
hkl/: Hkl-5.0.gir  Makefile.am  hkl-engine-aps-04id-polar.c  hkl-engine-esrf-id01-psic.c  hkl-engine-petra3-p08-lisa.c  hkl-engine-soleil-cristal-k4c.c  hkl-engine-soleil-sixs-med.c  hkl-pseudoaxis-auto.c  hkl-pseudoaxis-common-eulerians.c  hkl-pseudoaxis-common-hkl-private.h  hkl-pseudoaxis-common-hkl.c  hkl-pseudoaxis-common-psi-private.h  hkl-pseudoaxis-common-q.c  hkl-pseudoaxis-common-readonly-private.h  hkl-pseudoaxis-private.h  hkl-pseudoaxis.c  hkl-sample.c  hkl-type-builtins.c  hkl-type-builtins.h
hkl/api2/: Makefile.am
hkl/ccan/: ccan_config.h  configurator  configurator.c
hkl/ccan/coroutine/: coroutine.c  coroutine.h
hkl/ccan/darray/: darray.h
hkl3d/: Makefile.am  bullet.glsl  hkl3d-bullet.cpp  hkl3d-config.cpp  hkl3d-geometry.cpp  hkl3d-gl.cpp  hkl3d-model.cpp  hkl3d-object.cpp  hkl3d-private.h  hkl3d.cpp  hkl3d.h  model.glsl
scripts/: clean-all  diag.cocci  indent-haskell
tests/: Makefile.am  hkl-binoculars-t.c  hkl-pseudoaxis-e6c-t.c  hkl-pseudoaxis-t.c  hkl3d-test-t.c
tests/bindings/: main.py  python.py  test_cffi_types.py  test_hkl_ctypes.py
tests/tap/: hkl-tap.c
